Fixed bug of truncate table

--- a/styles/register.css
+++ b/styles/register.css
@@ -1,5 +1,5 @@
 html{
-	background:linear-gradient(to left,rgb(250,255,253),rgb(158,20,20)) no-repeat fixed ;
+	background:linear-gradient(to left,rgb(0, 241, 144),rgb(15, 38, 202)) no-repeat fixed ;
 	margin:0; 
 	border:0;
 	overflow: auto;
